<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/app_title_background"
        android:titleTextColor="@android:color/white"
        android:elevation="4dp"
        app:title="Compare Array and Binary Tree"/>

    <TextView
        android:id="@+id/tvNumberOfItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:text="@string/number_of_elements"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etNumberOfItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:hint="@string/enter_number"
        android:inputType="number"
        android:gravity="center"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/llLeft"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/array_elements">
            </TextView>

            <Button
                android:id="@+id/btnGenerateArray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/generate">
            </Button>

            <TextView
                android:id="@+id/tvArrayCreationTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="invisible">
            </TextView>

            <TextView
                android:id="@+id/tvArraySearchTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="invisible">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llMiddle"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvEquals"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:textStyle="bold"
                android:maxLines="1"
                android:textSize="22sp">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llRight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/binary_tree">
            </TextView>

            <Button
                android:id="@+id/btnGenerateBT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:gravity="center"
                android:textStyle="bold"
                android:text= "@string/generate">
            </Button>

            <TextView
                android:id="@+id/tvBinaryTreeCreationTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                app:autoSizeTextType="uniform"
                app:autoSizeMinTextSize="10sp"
                app:autoSizeMaxTextSize="30sp"
                app:autoSizeStepGranularity="1sp"
                android:visibility="invisible">
            </TextView>

            <TextView
                android:id="@+id/tvBinaryTreeSearchTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                app:autoSizeTextType="uniform"
                app:autoSizeMinTextSize="10sp"
                app:autoSizeMaxTextSize="30sp"
                app:autoSizeStepGranularity="1sp"
                android:visibility="invisible">
            </TextView>

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/tvSearch"
        android:layout_marginTop="60dp"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/automatically_generated"
        android:maxLines="1"
        app:autoSizeTextType="uniform"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeMaxTextSize="30sp"
        app:autoSizeStepGranularity="1sp">
    </TextView>

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:text="@string/search"
        android:textSize="20sp" />

</LinearLayout>